examples/ok/compare_ops_ok.hax
module ZZZ::CompareOpsOk;

enum E {
  A;
  B;
}

sub main() -> Int {
  var Int $a := 1;
  var Int $b := 2;
  var Str $s := "hi";

  var E $x;
  var E $y;

  if ($a < $b) { }
  if ($a == $b) { }
  if ($s == "hi") { }
  if ($x != $y) { }

  return 0;
}
