examples/fail/compare_eq_type_mismatch.hax
module ZZZ::CompareEqTypeMismatch;

sub main() -> Int {
  var Int $a := 1;
  var Str $s := "hi";

  if ($a == $s) { }
  return 0;
}
